--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,49 @@
+:root {
+    --background-color: rgb(215, 225, 238);
+}
 
+* {
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+}
+
+body {
+    background-color: var(--background-color);
+    padding: 0;
+    margin: 0;
+}
+
+.page-wrapper {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-wrapper {
+    flex: 1 0 0;
+    display: flex;
+    align-items: center;
+}
 
 .card {
+    background-color: white;
     margin: 0 auto;
+    padding: 1rem;
     width: 240px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card-img {
+    border-radius: 5px;
 }
 
 .card-text {
@@ -11,6 +52,7 @@
 
 .card-title {
     font-weight: bolder;
+    font-size: large;
 }
 
 
